--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -65,4 +65,11 @@
         <item name="colorOnSurface">?colorPrimary</item>
     </style>
 
+    <style name="ThemeOverlay.Hedvig.InsuranceCard" parent="">
+        <item name="android:textColorSecondary">@color/hedvig_black</item>
+        <item name="android:textColorTertiary">@color/text_color_primary_light</item>
+        <item name="colorPrimary">@color/hedvig_black</item>
+        <item name="colorSurface">@color/hedvig_white</item>
+    </style>
+
 </resources>
