--- a/app/src/main/res/layout/insurance_contract_card.xml
+++ b/app/src/main/res/layout/insurance_contract_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/base_margin_double"
-    android:layout_height="200dp"
+    android:layout_height="@dimen/contract_card_height"
     android:layout_width="match_parent"
     android:theme="@style/ThemeOverlay.Hedvig.InsuranceCard">
 
