--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -134,5 +134,6 @@
     <dimen name="pill_padding_vertical">4dp</dimen>
     <dimen name="pill_padding_horizontal">6dp</dimen>
     <dimen name="tab_layout_height">48dp</dimen>
+    <dimen name="contract_card_height">200dp</dimen>
 
 </resources>
