--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -66,7 +66,7 @@
         <item name="actionMenuTextColor">@color/hedvig_text_button_state</item>
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="materialAlertDialogTheme">@style/AlertDialog</item>
+        <item name="materialAlertDialogTheme">@style/ThemeOverlay.Hedvig.Dialog.Alert</item>
         <item name="android:windowLightStatusBar">?isLightTheme</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
@@ -81,12 +81,6 @@
     <attr name="textColorThird" format="reference" />
     <attr name="colorPlaceholder" format="reference" />
     <attr name="colorWarning" format="reference" />
-
-    <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
-        <item name="buttonBarButtonStyle">?materialButtonTextStyle</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:letterSpacing">0</item>
-    </style>
 
     <style name="Hedvig.Theme.Widgets.Chat.Hedvig" parent="Hedvig.Theme">
         <item name="colorSurface">@color/colorChatHedvigBackground</item>
