--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -65,4 +65,8 @@
         <item name="colorOnSurface">?colorPrimary</item>
     </style>
 
+    <style name="ThemeOverlay.Hedvig.Dialog.Alert" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="materialAlertDialogBodyTextStyle">?textAppearanceBody1</item>
+    </style>
+
 </resources>
