Minimal design fixes that I missed that I was supposed to do before

--- a/app/src/main/res/layout/connect_payment_result_fragment.xml
+++ b/app/src/main/res/layout/connect_payment_result_fragment.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:layout_marginBottom="@dimen/base_margin_double"
+        android:layout_marginBottom="@dimen/base_margin"
         app:layout_constraintBottom_toTopOf="@id/doItLater"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +66,8 @@
         style="?materialButtonOutlinedLargeStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_triple"
-        android:layout_marginEnd="@dimen/base_margin_triple"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginEnd="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin_quintuple"
         android:text="@string/pay_in_error.postpone_button"
         android:visibility="gone"
