HVG-188: Minor style tweak

--- a/app/src/main/res/layout/contract_detail_your_info_row.xml
+++ b/app/src/main/res/layout/contract_detail_your_info_row.xml
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAlignment="textEnd"
-        android:textAppearance="?textAppearanceHeadline6"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label"
