--- a/app/src/main/res/layout/upconing_renewal_card.xml
+++ b/app/src/main/res/layout/upconing_renewal_card.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/base_margin_double"
+    app:strokeWidth="1dp"
+    app:strokeColor="@color/color_divider"
     android:layout_marginEnd="@dimen/base_margin_double"
     android:padding="@dimen/base_margin_double"
     android:theme="@style/ThemeOverlay.Hedvig.RenewalCard">
@@ -68,27 +70,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/base_margin_double"
             android:layout_marginEnd="@dimen/base_margin"
-            android:layout_marginBottom="@dimen/base_margin_half"
             android:text="@string/DASHBOARD_RENEWAL_PROMPTER_CTA"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/separator" />
-
-        <!--TODO get real text key-->
-        <Button
-            android:id="@+id/dismiss"
-            style="?materialButtonTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/base_margin_double"
-            android:layout_marginEnd="@dimen/base_margin"
-            android:layout_marginBottom="@dimen/base_margin_half"
-            android:text="Dismiss"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/action"
             app:layout_constraintTop_toBottomOf="@id/separator" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
