--- a/app/src/main/res/layout/insurance_header.xml
+++ b/app/src/main/res/layout/insurance_header.xml
@@ -5,5 +5,6 @@
     android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin"
     android:layout_marginEnd="@dimen/base_margin_double"
+    android:layout_marginBottom="@dimen/base_margin_triple"
     android:text="@string/DASHBOARD_SCREEN_TITLE"
     android:textAppearance="?textAppearanceHeadline4" />
