--- a/app/src/main/res/layout/insurance_contract_card.xml
+++ b/app/src/main/res/layout/insurance_contract_card.xml
@@ -47,6 +47,7 @@
         <ImageView
             android:layout_width="@dimen/contract_card_logo_size"
             android:layout_height="@dimen/contract_card_logo_size"
+            android:contentDescription="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_hedvig_h"
