--- a/app/src/main/res/values/text_themes.xml
+++ b/app/src/main/res/values/text_themes.xml
@@ -60,7 +60,7 @@
     <style name="Hedvig.TextAppearance.Caption" parent="TextAppearance.MaterialComponents.Caption">
         <item name="lineHeight">16sp</item>
         <item name="android:letterSpacing">0</item>
-        <item name="android:textColor">?textColorThird</item>
+        <item name="android:textColor">?android:textColorTertiary</item>
     </style>
 
 </resources>
