--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -71,6 +71,7 @@
         <item name="android:textColorTertiary">@color/text_color_primary_light</item>
         <item name="colorPrimary">@color/hedvig_black</item>
         <item name="colorSurface">@color/hedvig_white</item>
+        <item name="colorOnSurface">?colorPrimary</item>
     </style>
 
     <style name="ThemeOverlay.Hedvig.Dialog.Alert" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
