--- a/app/src/main/res/values/logged_in_gradients.xml
+++ b/app/src/main/res/values/logged_in_gradients.xml
@@ -7,8 +7,8 @@
     </array>
 
     <array name="insurance_gradient">
-        <item type="color">#F2DAC0</item>
-        <item type="color">#F4E8DC</item>
+        <item type="color">#F6F6F6</item>
+        <item type="color">#F6F6F6</item>
         <item type="color">#F6F6F6</item>
     </array>
 
