--- a/app/src/main/res/layout/upconing_renewal_card.xml
+++ b/app/src/main/res/layout/upconing_renewal_card.xml
@@ -7,7 +7,9 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/base_margin_double"
     app:strokeWidth="1dp"
+    android:layout_marginBottom="@dimen/base_margin_double"
     app:strokeColor="@color/color_divider"
+    app:cardElevation="0dp"
     android:layout_marginEnd="@dimen/base_margin_double"
     android:padding="@dimen/base_margin_double"
     android:theme="@style/ThemeOverlay.Hedvig.RenewalCard">
@@ -71,6 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginEnd="@dimen/base_margin"
+            android:layout_marginBottom="@dimen/upcoming_renewal_card_button_margin_bottom"
             android:text="@string/DASHBOARD_RENEWAL_PROMPTER_CTA"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textColor="@color/colorPrimary"
