padding and toolbar color fix

--- a/app/src/main/res/layout/contract_detail_activity.xml
+++ b/app/src/main/res/layout/contract_detail_activity.xml
@@ -9,6 +9,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorSurface"
         app:navigationIcon="@drawable/ic_back" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
