--- a/app/src/main/res/layout/contract_detail_coverage_fragment.xml
+++ b/app/src/main/res/layout/contract_detail_coverage_fragment.xml
@@ -8,5 +8,6 @@
     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     app:spanCount="2"
+    android:clipToPadding="false"
     tools:context=".feature.insurance.ui.detail.coverage.CoverageFragment"
     tools:listitem="@layout/peril_detail" />
