--- a/app/src/main/res/layout/contract_detail_your_info_fragment.xml
+++ b/app/src/main/res/layout/contract_detail_your_info_fragment.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/recycler"
+    android:clipToPadding="false"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     app:layout_behavior="@string/appbar_scrolling_view_behavior" />
