--- a/app/src/main/res/layout/contract_detail_your_info_header.xml
+++ b/app/src/main/res/layout/contract_detail_your_info_header.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/base_margin_double"
+    android:layout_marginBottom="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_quintuple"
-    android:layout_marginEnd="@dimen/base_margin_double"
     android:textAppearance="?textAppearanceHeadline6"
     tools:text="@string/CONTRACT_DETAIL_COINSURED_TITLE" />
