--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -137,5 +137,5 @@
     <dimen name="upcoming_renewal_card_button_margin_bottom">1dp</dimen>
     <dimen name="contract_card_height">200dp</dimen>
     <dimen name="contract_card_logo_size">24dp</dimen>
-
+    <dimen name="large_button_corner_radius">8dp</dimen>
 </resources>
