--- a/app/src/main/res/layout/contract_detail_row.xml
+++ b/app/src/main/res/layout/contract_detail_row.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="textEnd"
         android:textAppearance="?textAppearanceBody1"
+        android:textColor="?colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label"
