--- a/app/src/main/res/layout/contract_detail_documents_fragment.xml
+++ b/app/src/main/res/layout/contract_detail_documents_fragment.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingEnd="@dimen/base_margin"
+    android:paddingStart="@dimen/base_margin"
     android:clipToPadding="false"
     android:id="@+id/recycler"
-    android:paddingTop="@dimen/base_margin_triple"
+    android:paddingTop="@dimen/base_margin_quintuple"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:context=".feature.insurance.ui.detail.documents.DocumentsFragment"
     tools:itemCount="2"
