--- a/app/src/main/res/layout/dashboard_upsell.xml
+++ b/app/src/main/res/layout/dashboard_upsell.xml
@@ -23,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
                 android:layout_marginTop="@dimen/base_margin_triple"
                 android:textAppearance="?textAppearanceSubtitle1"
                 tools:text="Worried about leaving the house?" />
