Complete the test case

--- a/app/src/main/res/layout/insurance_contract_card.xml
+++ b/app/src/main/res/layout/insurance_contract_card.xml
@@ -13,10 +13,10 @@
         android:layout_marginEnd="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin_half"
         android:theme="@style/ThemeOverlay.Hedvig.InsuranceCard"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintWidth_max="@dimen/contract_card_max_width"
         app:strokeColor="@color/color_divider"
         app:strokeWidth="1dp">
@@ -78,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/base_margin"
                 android:orientation="horizontal"
+                android:overScrollMode="never"
                 app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/arrow"
