--- a/app/src/main/res/layout/contract_detail_activity.xml
+++ b/app/src/main/res/layout/contract_detail_activity.xml
@@ -14,7 +14,7 @@
 
     <include
         android:id="@+id/error"
-        layout="@layout/home_error"
+        layout="@layout/generic_error"
         android:visibility="gone" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
