--- a/app/src/main/res/layout/peril_detail.xml
+++ b/app/src/main/res/layout/peril_detail.xml
@@ -3,23 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/peril_card_size"
     android:layout_marginTop="@dimen/base_margin">
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:layout_marginBottom="@dimen/base_margin_double"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/peril_icon_size"
+            android:layout_height="@dimen/peril_icon_size"
             android:contentDescription="@null"
             tools:src="@drawable/ic_active" />
 
@@ -30,8 +29,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/base_margin"
             android:ellipsize="end"
-            android:maxLines="1"
-            android:textAppearance="?textAppearanceSubtitle1"
+            android:maxLines="2"
+            android:textAppearance="?textAppearanceSubtitle2"
             tools:text="Fire" />
 
     </LinearLayout>
