--- a/app/src/main/res/values/text_themes.xml
+++ b/app/src/main/res/values/text_themes.xml
@@ -21,6 +21,7 @@
 
     <style name="Hedvig.TextAppearance.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
         <item name="lineHeight">20sp</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
     </style>
 
     <dimen name="subtitle_1_placeholder_width">48sp</dimen>
