--- a/app/src/main/res/layout/activity_key_gear_valuation_info.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation_info.xml
@@ -26,8 +26,8 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/KEY_GEAR_RECCEIPT_VIEW_CLOSE_BUTTON"
             android:padding="@dimen/base_margin"
-            android:tint="@color/icon_tint"
-            app:srcCompat="@drawable/ic_close" />
+            app:srcCompat="@drawable/ic_close"
+            app:tint="@color/icon_tint" />
 
         <TextView
             android:layout_width="wrap_content"
