--- a/app/src/main/res/layout/activity_web_onboarding.xml
+++ b/app/src/main/res/layout/activity_web_onboarding.xml
@@ -29,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@string/HEDVIG_LOGO_ACCESSIBILITY"
-            android:tint="?colorPrimary"
-            app:srcCompat="@drawable/ic_hedvig_wordmark" />
+            app:srcCompat="@drawable/ic_hedvig_wordmark"
+            app:tint="?colorPrimary" />
 
         <ImageView
             android:id="@+id/openChat"
