--- a/app/src/main/res/layout/chat_message_file_upload.xml
+++ b/app/src/main/res/layout/chat_message_file_upload.xml
@@ -25,13 +25,13 @@
             android:layout_marginEnd="@dimen/base_margin_double"
             android:background="@drawable/chat_message_hedvig_ripple"
             android:backgroundTint="?colorSecondary"
-            android:drawableStart="@drawable/ic_file"
             android:drawablePadding="@dimen/base_margin_half"
             android:padding="12dp"
             android:textAppearance="?textAppearanceBody1"
             android:textColor="?colorOnSecondary"
             app:drawableTint="?colorOnSecondary"
-            tools:text="pdf-fil uppladdad" />
+            tools:text="pdf-fil uppladdad"
+            app:drawableStartCompat="@drawable/ic_file" />
 
     </FrameLayout>
 
