--- a/app/src/main/res/layout/hedvig_logo.xml
+++ b/app/src/main/res/layout/hedvig_logo.xml
@@ -5,6 +5,6 @@
     android:layout_width="@dimen/pager_indicator_hedvig_logo_size"
     android:layout_height="@dimen/pager_indicator_hedvig_logo_size"
     android:contentDescription="@null"
-    android:tint="@color/gray"
     app:srcCompat="@drawable/ic_hedvig_h"
-    tools:layout_gravity="center" />
+    tools:layout_gravity="center"
+    app:tint="@color/gray" />
