--- a/app/src/main/res/layout/offer_peril_area.xml
+++ b/app/src/main/res/layout/offer_peril_area.xml
@@ -32,10 +32,10 @@
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:drawableStart="@drawable/ic_coverage"
         android:drawablePadding="@dimen/base_margin_double"
         android:text="@string/OFFER_SCREEN_PERIL_SECTION_TITLE"
-        android:textAppearance="?textAppearanceBody1" />
+        android:textAppearance="?textAppearanceBody1"
+        app:drawableStartCompat="@drawable/ic_coverage" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/perils"
