--- a/app/src/main/res/layout/offer_terms_area.xml
+++ b/app/src/main/res/layout/offer_terms_area.xml
@@ -14,9 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:drawableStart="@drawable/ic_my_documents"
         android:drawablePadding="@dimen/base_margin_double"
-        android:text="@string/OFFER_SCREEN_INSURED_AMOUNTS_TITLE" />
+        android:text="@string/OFFER_SCREEN_INSURED_AMOUNTS_TITLE"
+        app:drawableStartCompat="@drawable/ic_my_documents" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/insurableLimits"
