--- a/app/src/main/res/layout/home_common_claim.xml
+++ b/app/src/main/res/layout/home_common_claim.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/base_margin"
+    android:theme="@style/ThemeOverlay.Hedvig.LoggedInCardView"
     tools:layout_margin="@dimen/base_margin"
     tools:layout_width="160dp">
 
