--- a/app/src/main/res/layout/referrals_code.xml
+++ b/app/src/main/res/layout/referrals_code.xml
@@ -35,6 +35,7 @@
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_double"
+        android:theme="@style/ThemeOverlay.Hedvig.LoggedInCardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/codeLabel">
