--- a/app/src/main/res/layout/contract_detail_documents_document.xml
+++ b/app/src/main/res/layout/contract_detail_documents_document.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_marginBottom="@dimen/base_margin"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/base_margin_double"
+    android:layout_marginEnd="@dimen/base_margin_double"
     android:minHeight="@dimen/contract_document_card">
 
     <androidx.constraintlayout.widget.ConstraintLayout
