--- a/app/src/main/res/layout/contract_detail_row.xml
+++ b/app/src/main/res/layout/contract_detail_row.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/base_margin_double"
-    android:paddingBottom="@dimen/base_margin_double">
+    android:padding="@dimen/base_margin_double">
 
     <TextView
         android:id="@+id/label"
