what was i thinking?

--- a/app/src/main/res/layout/contract_detail_documents_fragment.xml
+++ b/app/src/main/res/layout/contract_detail_documents_fragment.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingEnd="@dimen/base_margin"
-    android:paddingStart="@dimen/base_margin"
+    android:paddingEnd="@dimen/base_margin_double"
+    android:paddingStart="@dimen/base_margin_double"
     android:clipToPadding="false"
     android:id="@+id/recycler"
     android:paddingTop="@dimen/base_margin_quintuple"
